# WinObjC

./: .ci-repo.xml  .clang-format  .gitattributes  .gitignore  .gitmodules  Coding_Standards.md  Contributing.md  GitVersion.yml  Helloworld.txt  LICENSE.md  README.md  ThirdPartyNotices.txt  azure-pipelines.yml  counting_sort  init.cmd  init.ps1  license.txt  newfile.txt  nuget.config  sh.exe.stackdump  winobjc.version
tools/vsimporter/: CMakeLists.txt  PlistCpp.vcxproj  WBITelemetry.vcxproj  WBITelemetry.vcxproj.filters  hmapmaker.vcxproj  hmapmaker.vcxproj.filters  packages.config  pugixml.vcxproj  resource_vsimporter.h  sb-expandvars.vcxproj  sb-expandvars.vcxproj.filters  vsimporter.aps  vsimporter.rc  vsimporter.vcxproj  vsimporter.vcxproj.filters  xib2nib.aps  xib2nib.rc  xib2nib.vcxproj  xib2nib.vcxproj.filters
tools/vsimporter/PlistCpp/: PlistCpp.vcxproj  PlistCpp.vcxproj.filters
tools/vsimporter/WBITelemetry/: ReadMe.txt  WBITelemetry.cpp  WBITelemetry.h  WBITelemetry.vcxproj  WBITelemetry.vcxproj.filters
tools/vsimporter/hmapmaker/: Project.json  hmapmaker.vcxproj  hmapmaker.vcxproj.filters
tools/vsimporter/include/: BuildSettings.h  BuildSettingsInfo.h  EnvironmentVariableCollection.h  SBAggregateTarget.h  SBBuildPhase.h  SBFrameworksBuildPhase.h  SBHeadersBuildPhase.h  SBLog.h  SBNativeTarget.h  SBProject.h  SBResourcesBuildPhase.h  SBSourcesBuildPhase.h  SBTarget.h  SBWorkspace.h  SimpleVariableCollection.h  SplitStream.h  VariableCollection.h  VariableCollectionHierarchy.h  VariableCollectionManager.h  XCVariableExpander.h  query.h  settingmodifiers.h  types.h  utils.h  xcconfigparser.h
tools/vsimporter/include/PBX/: ErrorReporter.h  PBXAggregateTarget.h  PBXBuildFile.h  PBXFile.h  (+28 more)
tools/vsimporter/pugixml/: pugixml.vcxproj
tools/vsimporter/sb-expandvars/: sb-expandvars.vcxproj  sb-expandvars.vcxproj.filters
tools/vsimporter/src/: BuildSettings.cpp  BuildSettingsInfo.cpp  EnvironmentVariableCollection.cpp  SBAggregateTarget.cpp  SBBuildPhase.cpp  SBFrameworksBuildPhase.cpp  SBHeadersBuildPhase.cpp  SBLog.cpp  SBNativeTarget.cpp  SBProject.cpp  SBResourcesBuildPhase.cpp  SBSourcesBuildPhase.cpp  SBTarget.cpp  SBWorkspace.cpp  SimpleVariableCollection.cpp  VariableCollection.cpp  VariableCollectionHierarchy.cpp  VariableCollectionManager.cpp  XCVariableExpander.cpp  query.cpp  sb-hmapmaker.cpp  settingmodifiers.cpp  starexpand.cpp  vsimporter.cpp  xcconfigparser.cpp
tools/vsimporter/xib2nib/: MKMapView.cpp  NIBWriter.cpp  NIBWriter.h  NSLayoutConstraint.cpp  ObjectConverter.cpp  ObjectConverter.h  Project.json  UIActivityIndicatorView.cpp  UIActivityIndicatorView.h  UIBarButtonItem.cpp  UIButton.cpp  UIButton.h  UICollectionView.cpp  UICollectionView.h  UICollectionViewCell.cpp  UICollectionViewCell.h  UICollectionViewController.h  UIColor.cpp  UIColor.h  UIControl.cpp  UIControl.h  UICustomResource.cpp  UICustomResource.h  UIFont.cpp  UIFont.h  UIImageView.cpp  UIImageView.h  UILabel.cpp  UILabel.h  UINavigationController.cpp  UINavigationItem.cpp  UINavigationItem.h  UIPanGestureRecognizer.cpp  UIPanGestureRecognizer.h  UIPickerView.cpp  UIPongPressGestureRecognizer.cpp  UIProgressView.cpp  UIProxyObject.cpp  UIRuntimeAccessibilityConfiguration.h  UIRuntimeEventConnection.cpp  (+42 more)
(+9968 files in other folders)
